<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RenPlay</string>

    <string name="perm_title">Требуется доступ к файлам</string>
    <string name="perm_desc">Приложению необходимо разрешение на доступ ко всем файлам для поиска и запуска проектов Ren\'Py.</string>
    <string name="perm_button">Предоставить разрешение</string>

    <string name="main_title">RenPlay</string>
    <string name="label_project">Название игры</string>
    <string name="label_version">Версия</string>
    <string name="btn_choose_icon">ВЫБРАТЬ СВОЮ ИКОНКУ</string>
    <string name="icon_selected">ИКОНКА ВЫБРАНА</string>
    
    <string name="nav_appearance">Внешний вид</string>
    <string name="nav_about">О программе</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_engine_settings">Настройки Ren\'Py</string>
    <string name="setting_use_game_details">Экран «Об игре»</string>
    <string name="setting_use_game_details_desc">Показывать подробную информацию об игре перед запуском</string>
    <string name="setting_show_list_bg">Фон в списке</string>
    <string name="setting_show_list_bg_desc">Отображать фон игры в правой части карточки</string>

    <string name="group_language">Язык</string>
    <string name="item_app_language">Язык приложения</string>
    <string name="language_system">Системный</string>
    <string name="language_ru">Русский</string>
    <string name="language_en">English</string>
    
    <string name="group_theme">Тема</string>
    <string name="item_app_theme">Тема приложения</string>
    <string name="item_dynamic_colors">Динамические цвета</string>
    <string name="item_enable_blur">Размытие интерфейса</string>
    <string name="blur_supported">Размытие поддерживается системой</string>
    <string name="blur_unsupported">Не поддерживается вашим устройством (ограничение ОС)</string>
    <string name="setting_advanced_animations">Расширенные анимации</string>
    <string name="setting_advanced_animations_desc">Плавные переходы и перестроение списков</string>
    
    <string name="theme_system">Системная</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark">Тёмная</string>
    <string name="theme_black">Чёрная</string>

    <string name="engine_hw_video">Аппаратное ускорение</string>
    <string name="engine_hw_video_desc">Включить аппаратное ускорение для видео.</string>
    <string name="engine_phone_variant">Мобильный интерфейс</string>
    <string name="engine_phone_variant_desc">Использовать мобильный интерфейс.</string>

    <string name="error_no_game_folder">Ошибка: В папке проекта нет подпапки \'game\'!</string>
    <string name="add_game_title">Новая игра</string>
    <string name="add_game_button">ДОБАВИТЬ В БИБЛИОТЕКУ</string>
    <string name="playtime_less_than_minute">Менее минуты</string>
    <string name="playtime_format">%1$d ч %2$d мин</string>
    <string name="playtime_format_min">%1$d мин</string>
    <string name="logs_not_found">Логов Ren\'Py не найдено в буфере.</string>
    <string name="logs_read_error">Ошибка чтения логов: %1$s</string>
    <string name="logs_dialog_title">Логи</string>
    <string name="logs_copy_button">СКОПИРОВАТЬ В БУФЕР</string>
    <string name="logs_copied_toast">Скопировано</string>
    <string name="engine_model_rendering">Рендеринг на основе моделей</string>
    <string name="engine_model_rendering_desc">Устраняет медленные анимации меню на некоторых устройствах.</string>
    <string name="engine_force_recompile">Перекомпилировать скрипты</string>
    <string name="engine_force_recompile_desc">Всегда перекомпилировать скрипты для улучшения совместимости в обмен на увеличение времени загрузки.</string>

    <string name="version_prefix">Версия: %1$s</string>
    <string name="group_resources">Ресурсы</string>
    <string name="item_github">GitHub</string>
    <string name="desc_github">Исходный код проекта</string>
    <string name="item_licenses">Лицензии ПО</string>
    <string name="desc_licenses">Открытый исходный код</string>
    <string name="licenses_title">Лицензии открытого ПО</string>
    <string name="group_development">Разработчик</string>
    <string name="author_name">Reset171</string>

    <string name="translation_settings_title">Офлайн перевод</string>
    <string name="translation_settings_desc">Перевод текста в игре (Google ML Kit)</string>
    <string name="trans_enable">Включить перевод</string>
    <string name="trans_enable_desc">Переводить текст в игре</string>
    <string name="trans_source_lang">Язык игры</string>
    <string name="trans_target_lang">Язык перевода</string>
    <string name="trans_manage_models">Языковые модели</string>
    <string name="trans_models_downloaded">Скачаны и готовы к работе</string>
    <string name="trans_models_not_downloaded">Не скачаны</string>
    <string name="trans_models_downloading">Скачивание (ожидайте)...</string>
    <string name="trans_btn_download">Скачать модели</string>
    <string name="trans_btn_delete">Удалить модели</string>

    <string name="lang_en">Английский</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_ja">Японский</string>
    <string name="lang_zh">Китайский</string>
    <string name="lang_ko">Корейский</string>
    <string name="lang_es">Испанский</string>
    <string name="lang_fr">Французский</string>
    <string name="lang_de">Немецкий</string>

    <string name="picker_title">Выбор игры</string>
    <string name="picker_select_btn">ВЫБРАТЬ ЭТУ ПАПКУ</string>
    <string name="picker_empty">Папка пуста</string>
    <string name="picker_access_denied">Нет доступа</string>
    <string name="picker_title_zip">Выбор архива</string>
    <string name="picker_title_image">Выбор изображения</string>

    <string name="main_empty_project_title">Проект не выбран</string>
    <string name="main_empty_project_desc">Добавьте директорию с визуальными новеллами</string>

    <string name="action_search">Поиск</string>
    <string name="action_sort">Сортировка</string>
    <string name="sort_newest">Сначала новые</string>
    <string name="sort_alphabetical">По алфавиту</string>
    <string name="sort_manual">Без сортировки (вручную)</string>
    <string name="sort_manual_hint">Удерживайте карточку для перемещения</string>
    
    <string name="game_details_play">ИГРАТЬ</string>
    <string name="game_details_shortcut">Создать ярлык</string>
    <string name="game_details_shortcut_desc">Добавить на главный экран</string>
    <string name="game_details_logs">Смотреть логи</string>
    <string name="game_details_logs_desc">Отладка и ошибки Ren\'Py</string>
    <string name="game_details_delete">Удалить игру</string>
    <string name="game_details_delete_desc">Файлы останутся на устройстве</string>
    <string name="label_tool">Управление</string>
    
    <string name="stat_total">Всего в игре</string>
    <string name="stat_today">За сегодня</string>
    <string name="library_search_hint">Поиск...</string>
    <string name="library_empty_search">Ничего не найдено</string>

    <string name="action_view_type">Вид</string>
    <string name="swipe_action_details">Об игре</string>
    <string name="group_ui_style">Стиль интерфейса</string>
    <string name="ui_style_material">Material You</string>
    <string name="ui_style_oneui">OneUI</string>
    <string name="dialog_ui_style_title">Стиль приложения</string>
    <string name="pref_category_ui">Интерфейс</string>
    <string name="pref_category_engine">Настройки Ren\'Py</string>
    <string name="pref_system_theme">Системная тема</string>
    <string name="pref_ui_style">Стиль приложения</string>
    <string name="clip_crash_logs">Логи ошибок</string>
    <string name="clip_logs">Логи</string>

    <string name="loading_game_title">Игра запускается, ожидайте...</string>
    <string name="loading_game_name">Проект: %1$s</string>
    <string name="loading_engine_version">Версия: Ren\'Py %1$s</string>

    <string name="engine_not_installed">Версия не установлена</string>
    <string name="engine_not_installed_toast">Версия не установлена!</string>
    <string name="engine_version_title">Выбор версии</string>
    <string name="engine_version_renpy">Версия Ren\'Py</string>
    <string name="engine_version_dialog_title">Выбор версии Ren\'Py</string>
    <string name="engine_installed">Установлена</string>
    <string name="engine_installed_click_to_delete">Установлена (нажмите для удаления)</string>
    <string name="engine_delete_title">Удаление</string>
    <string name="engine_delete_confirm">Удалить версию Ren\'Py %1$s?</string>
    <string name="engine_delete_btn">Удалить</string>
    <string name="engine_cancel_btn">Отмена</string>
    <string name="engine_install_zip">Установить из ZIP</string>
    <string name="engine_install_zip_desc">Выберите архив плагина</string>
    <string name="engine_auto_selected">Автоматически выбрана %1$s</string>
    <string name="engine_bound_to">Привязана к версии %1$s</string>
    <string name="engine_select_prompt">Выбрать...</string>
    <string name="engine_version_format">Ren\'Py %1$s</string>

    <string name="game_delete_confirm_title">Удаление из библиотеки</string>
    <string name="game_delete_confirm_desc">Проект \"%1$s\" исчезнет из списка, но его файлы останутся на устройстве.</string>
    <string name="action_delete">Удалить</string>
    <string name="action_cancel">Отмена</string>
    <string name="game_details_launch_params">Параметры запуска</string>
    <string name="game_details_edit">Изменить</string>
    <string name="game_details_edit_desc">Изменить название, иконку и фон</string>
    <string name="edit_game_title">Редактирование</string>
    <string name="edit_game_save">СОХРАНИТЬ</string>
    <string name="btn_choose_bg">ВЫБРАТЬ ФОН</string>
    <string name="engine_management_title">Управление версиями Ren\'Py</string>

    <string name="decompile_scripts">Декомпиляция</string>
    <string name="decompile_scripts_desc">Конвертация .rpyc в .rpy</string>
    <string name="decompile_progress">Декомпиляция: %1$d / %2$d</string>
    <string name="decompile_success">Готово: %1$d декомпилировано, %2$d пропущено, %3$d ошибок</string>
    <string name="decompile_error">Ошибка декомпиляции: %1$s</string>
    <string name="decompile_no_rpyc">Файлы .rpyc не найдены</string>
    <string name="decompile_overwrite_title">Перезаписать файлы?</string>
    <string name="decompile_overwrite_desc">Обнаружены уже декомпилированные файлы. Перезаписать их?</string>
    <string name="decompile_btn_overwrite">Перезаписать</string>
    <string name="decompile_btn_skip">Пропустить существующие</string>
    <string name="decompile_running">Декомпиляция...</string>

    <string name="extract_rpa">Распаковка .rpa</string>
    <string name="extract_rpa_desc">Извлечь содержимое архивов</string>
    <string name="extract_rpa_progress">Распаковка: %1$d / %2$d</string>
    <string name="extract_rpa_running">Распаковка...</string>
    <string name="extract_rpa_success">Готово: %1$d архивов, %2$d файлов извлечено, %3$d пропущено, %4$d ошибок</string>
    <string name="extract_rpa_no_archives">Архивы .rpa не найдены</string>
    <string name="extract_rpa_error">Ошибка распаковки: %1$s</string>

    <string name="setting_list_control_style">Стиль управления</string>
    <string name="setting_list_control_style_desc">Отображать меню списком вместо сетки</string>
</resources>