<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_project"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/et_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_version"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/iv_icon_preview"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:scaleType="centerCrop"
            android:background="#1A000000"
            android:src="@drawable/ic_no_icon" />

        <Button
            android:id="@+id/btn_pick_icon"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/btn_choose_icon" />
    </LinearLayout>

</LinearLayout>
